--- a/tbx/core/templates/torchbox/base.html
+++ b/tbx/core/templates/torchbox/base.html
@@ -87,9 +87,9 @@
                 <div class="contact container listing">
                     <h2>Say hello</h2>
                     <ul class="footerbleed">
-                        <li><a href="mailto:{% if self|in_play or play_404 %}play{% else %}hello{% endif %}@torchbox.com"><i class="icon-mail"></i><span>{% if self|in_play or play_404 %}play{% else %}hello{% endif %}@torchbox.com</span></a></li>
-                        <li><a href="tel:+441608811870"><i class="icon-phone"></i><span>+44 (0) 1608 811870</span></a></li>
-                        <li><a href="https://twitter.com/{% if self|in_play or play_404 %}playsays{% else %}torchbox{% endif %}"><i class="icon-twitter"></i><span>{% if self|in_play or play_404 %}@PlaySays{% else %}@torchbox{% endif %}</span></a></li>
+                        <li><a href="mailto:{% if self|in_play or play_404 %}play{% else %}hello{% endif %}@choimirai.com"><i class="icon-mail"></i><span>{% if self|in_play or play_404 %}play{% else %}hello{% endif %}@choimirai.com</span></a></li>
+                        <li><a href="tel:+818039113040"><i class="icon-phone"></i><span>+81 (0) 80 3911 3040</span></a></li>
+                        <li><a href="https://twitter.com/{% if self|in_play or play_404 %}playsays{% else %}choimirai{% endif %}"><i class="icon-twitter"></i><span>{% if self|in_play or play_404 %}@PlaySays{% else %}@choimirai{% endif %}</span></a></li>
                     </ul>
                     {% if not self|in_play or play_404 %}
                         <span class="newsletter-cta"><strong>Get the best of the web</strong> in your inbox every Friday</span>
