Add logos (JPN, ENG) for Choimirai and update references.

--- a/tbx/core/templates/torchbox/base.html
+++ b/tbx/core/templates/torchbox/base.html
@@ -147,6 +147,7 @@
                     </div>
 
                 </div>
+                {# Content managed by Wagtail Image #}
                 <a href="http://wagtail.io"><img class="wagtail2" src="{% static "torchbox/images/wagtail.png" %}"  alt="Wagtail"></a>
             </div>
         </footer>
