--- a/tbx/core/static/torchbox/css/main.css
+++ b/tbx/core/static/torchbox/css/main.css
@@ -415,10 +415,12 @@ main nav li.active a:after {
     padding: 1em;
 }
 
+/* This logo controls a logo in a blog page.*/
+/* Logo in the blog-index page is managed by ".page-blogindexpage .logo" class in medium.css. */
 .logo {
     height:3em;
     display: block;
-    background: url("../images/logo-torchbox-grey.png") center left no-repeat;
+    background: url("../images/logo-choimirai-jpn.png") center left no-repeat;
     background-size: auto 2em;
     width:14em;
     -webkit-transition: all 0.2s ease;
@@ -589,7 +591,7 @@ main nav li.active a:after {
 }
 
 .page-homepage .logo {
-    background: url("../images/logo-torchbox-white.png") center left no-repeat;
+    background: url("../images/logo-choimirai-eng.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -910,7 +912,7 @@ main nav li.active a:after {
 }
 
 .page-jobindexpage .logo{
-    background: url("../images/logo-torchbox-white.png") center left no-repeat;
+    background: url("../images/logo-choimirai-eng.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -1166,7 +1168,7 @@ main nav li.active a:after {
 }
 
 .page-standardpage .logo {
-    background: url("../images/logo-torchbox-grey.png") center left no-repeat;
+    background: url("../images/logo-choimirai-eng.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -1816,7 +1818,7 @@ a.tooltip span{
 }
 
 .page-workpage .logo {
-    background-image: url("../images/logo-torchbox-grey.png");
+    background-image: url("../images/logo-choimirai-eng.png");
 }
 
 .page-workpage .single {
