--- a/tbx/core/static/torchbox/css/fontello-embedded.css
+++ b/tbx/core/static/torchbox/css/fontello-embedded.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'fontello';
-  src: url('font/fontello.eot?52513473');
-  src: url('font/fontello.eot?52513473#iefix') format('embedded-opentype'),
-       url('font/fontello.svg?52513473#fontello') format('svg');
+  src: url('../font/fontello.eot?52513473');
+  src: url('../font/fontello.eot?52513473#iefix') format('embedded-opentype'),
+       url('../font/fontello.svg?52513473#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
