--- a/tbx/core/templates/500.html
+++ b/tbx/core/templates/500.html
@@ -9,7 +9,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title> | Torchbox</title>
+        <title> | Choimirai</title>
 
         <meta name="description" content="">
 
