Re-enable whitenoise

--- a/tbx/core/templates/torchbox/home_page.html
+++ b/tbx/core/templates/torchbox/home_page.html
@@ -26,7 +26,7 @@
 
             {% if not self.hero_video_id %}
                 <a href="/about"><div class="button">Who are we</div> </a>
-                <a href="mailto:hello@torchbox.com"> <div class="button"> Get in touch</div></a>
+                <a href="mailto:hello@choimirai.com"> <div class="button"> Get in touch</div></a>
                 <a href="#posts" class="arrow"></a>
             {% endif %}
         </div>
