--- a/tbx/core/templates/torchbox/base.html
+++ b/tbx/core/templates/torchbox/base.html
@@ -104,7 +104,7 @@
                     <h2 class="visuallyhidden">Visit us</h2>
                     <ul class="clearfix listing">
                         <li>
-                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.858115,-1.480577,17z/data=!3m1!4b1!4m2!3m1!1s0x4876d26f301900bd:0xca3bbb6b78d4b3e4">
+                            <a href="https://goo.gl/maps/DsPMgSPcMGq">
                                 <div class="svg">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">
                                         <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>
@@ -114,29 +114,10 @@
 
                                 <h3>Oxford</h3>
                                 <div class="vcard">
-                                    <span class="street-address">Unit&nbsp;9, Southill&nbsp;Business&nbsp;Park</span>,
-                                    <span class="region">Charlbury</span>,
-                                    <span class="postal-code">OX7&nbsp;3EW</span>,
-                                    <span class="country-name">UK</span>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.453371,-2.60056,20z/data=!3m1!4b1!4m2!3m1!1s0x48718dd73f674ef7:0xa01401396c06a317">
-                                <div class="svg">
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">
-                                        <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>
-                                        </path>
-                                    </svg>
-                                </div>
-
-                                <h3>Bristol</h3>
-                                <div class="vcard">
-                                    <span class="street-address">The Annexe, 4&nbsp;Unity&nbsp;Street</span>,
-                                    <span class="region">Bristol</span>,
-                                    <span class="postal-code">BS1&nbsp;5HH</span>,
-                                    <span class="country-name">UK</span>
+                                    <span class="street-address">Nakaku, Sakuragicho&nbsp;1-1-7&nbsp;TOC&nbsp;Minatomirai&nbsp;Level&nbsp;10</span>,
+                                    <span class="region">Yokohama</span>,
+                                    <span class="postal-code">231-0062</span>,
+                                    <span class="country-name">Japan</span>
                                 </div>
                             </a>
                         </li>
