Include media and static folders

--- a/tbx/core/templates/torchbox/base.html
+++ b/tbx/core/templates/torchbox/base.html
@@ -112,11 +112,11 @@
                                     </svg>
                                 </div>
 
-                                <h3>Oxford</h3>
+                                <h3>Yokohama</h3>
                                 <div class="vcard">
-                                    <span class="street-address">Nakaku, Sakuragicho&nbsp;1-1-7&nbsp;TOC&nbsp;Minatomirai&nbsp;Level&nbsp;10</span>,
-                                    <span class="region">Yokohama</span>,
-                                    <span class="postal-code">231-0062</span>,
+                                    <span class="street-address">Sakuragicho&nbsp;1-1-7&nbsp;TOC&nbsp;Minatomirai&nbsp;Level&nbsp;10</span><br>
+                                    <span class="region">Yokohama</span><br>
+                                    <span class="postal-code">231-0062</span><br>
                                     <span class="country-name">Japan</span>
                                 </div>
                             </a>
