--- a/tbx/core/templates/torchbox/base.html
+++ b/tbx/core/templates/torchbox/base.html
@@ -115,8 +115,8 @@
                                 <h3>Yokohama</h3>
                                 <div class="vcard">
                                     <span class="street-address">Sakuragicho&nbsp;1-1-7&nbsp;TOC&nbsp;Minatomirai&nbsp;Level&nbsp;10</span><br>
-                                    <span class="region">Yokohama</span><br>
-                                    <span class="postal-code">231-0062</span><br>
+                                    <span class="region">Yokohama</span>,
+                                    <span class="postal-code">231-0062</span>,
                                     <span class="country-name">Japan</span>
                                 </div>
                             </a>
