--- a/tbx/core/static/torchbox/css/fontello.css
+++ b/tbx/core/static/torchbox/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./font/fontello.eot?33724586');
-  src: url('./font/fontello.eot?33724586#iefix') format('embedded-opentype'),
-       url('./font/fontello.woff?33724586') format('woff'),
-       url('./font/fontello.ttf?33724586') format('truetype'),
-       url('./font/fontello.svg?33724586#fontello') format('svg');
+  src: url('../css/font/fontello.eot?33724586');
+  src: url('../css/font/fontello.eot?33724586#iefix') format('embedded-opentype'),
+       url('../css/font/fontello.woff?33724586') format('woff'),
+       url('../css/font/fontello.ttf?33724586') format('truetype'),
+       url('../css/font/fontello.svg?33724586#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
