--- a/tbx/core/static/torchbox/css/fontello.css
+++ b/tbx/core/static/torchbox/css/fontello.css
@@ -4,7 +4,7 @@
   src: url('font/fontello.eot?33724586#iefix') format('embedded-opentype'),
        url('font/fontello.woff?33724586') format('woff'),
        url('font/fontello.ttf?33724586') format('truetype'),
-       url('font/fontello.svg') format('svg');
+       url('font/fontello.svg?33724586#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
