Change db setting for heroku

--- a/tbx/core/static/torchbox/css/main.css
+++ b/tbx/core/static/torchbox/css/main.css
@@ -602,7 +602,7 @@ main nav li.active a:after {
 
 .page-homepage .hero {
     padding: 22em 0em 3em 0em;
-    background: url("../images/Homepage_hero.jpg") no-repeat center;
+    background: url("../images/Homepage_innovation.jpg") no-repeat center;
     background-color: #5b6265;
     position: relative;
     top: -21em;
