--- a/tbx/core/templates/torchbox/job_index_page.html
+++ b/tbx/core/templates/torchbox/job_index_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class= "crop-height">
-        <img class="scale" src="{% static "torchbox/images/desk_02.jpg" %}"  width="" height="" alt="">
+        <img class="scale" src="{% static "torchbox/images/job-index-minatomirai-sunrise.jpg" %}"  width="" height="" alt="">
     </div>
 
     <section class="intro jobs">
@@ -35,9 +35,9 @@
         </div>
 
         <div class="news">
-            <p>We are always interested in hearing from smart people who want to work at Torchbox. If there's not an obvious position to apply for, do <a href="mailto:hello@torchbox.com" class="link-inline">get in touch</a> anyway.</p>
-            <p>Be the first to know about new jobs at Torchbox:</p>
-            <p><a href="http://torchbox.us10.list-manage.com/subscribe?u=63765af7f1090864643763edd&id=1fc112ba28" class="button">Sign-up to our newsletter</a></p>
+            <p>We are always interested in hearing from smart people who want to work at Choimirai. If there's not an obvious position to apply for, do <a href="mailto:hello@choimirai.com" class="link-inline">get in touch</a> anyway.</p>
+            <p>Be the first to know about new jobs at Choimirai:</p>
+            <p><a href="http://choimirai.us3.list-manage.com/subscribe?u=2765610184c9ee24323c127c0&id=3d650ffa14" class="button">Sign-up to our newsletter</a></p>
         </div>
 
         <div class="sub">
@@ -47,7 +47,7 @@
 
     <section class="benefits clearfix">
         <div class="center">
-            <h2>Working at Torchbox</h2>
+            <h2>Working at Choimirai</h2>
         </div>
 
         {% if self.content_block.all %}
