--- a/tbx/core/templates/torchbox/tags/top_menu.html
+++ b/tbx/core/templates/torchbox/tags/top_menu.html
@@ -14,7 +14,7 @@
     <div class="play-nav">
         <nav role="navigation">
         <a href="{% pageurl site_root %}{% if calling_page|in_play or play_404 %}play/{% endif %}" class="logo container">
-            <p class="tbx-no">A division of Torchbox</p>
+            <p class="tbx-no">A division of Choimirai</p>
         </a>
         <a href="#menu" class="menu-button">&#x2261;</a>
           <ul class="bleed">
