--- a/static/torchbox/css/main.css
+++ b/static/torchbox/css/main.css
@@ -420,7 +420,7 @@ main nav li.active a:after {
 .logo {
     height:3em;
     display: block;
-    background: url("../images/logo-choimirai-jpn.png") center left no-repeat;
+    background: url("../images/the-school-of-choimirai-logo-red-v3.png") center left no-repeat;
     background-size: auto 2em;
     width:14em;
     -webkit-transition: all 0.2s ease;
@@ -591,7 +591,7 @@ main nav li.active a:after {
 }
 
 .page-homepage .logo {
-    background: url("../images/logo-choimirai-jpn.png") center left no-repeat;
+    background: url("../images/the-school-of-choimirai-logo-red-v3.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -602,7 +602,7 @@ main nav li.active a:after {
 
 .page-homepage .hero {
     padding: 22em 0em 3em 0em;
-    background: url("../images/Homepage_hero.jpg") no-repeat center;
+    background: url("../images/homepage-landing-v2.jpg") no-repeat center;
     background-color: #5b6265;
     position: relative;
     top: -21em;
@@ -912,7 +912,7 @@ main nav li.active a:after {
 }
 
 .page-jobindexpage .logo{
-    background: url("../images/logo-choimirai-eng.png") center left no-repeat;
+    background: url("../images/the-school-of-choimirai-logo-red-v3.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -1168,7 +1168,7 @@ main nav li.active a:after {
 }
 
 .page-standardpage .logo {
-    background: url("../images/logo-choimirai-eng.png") center left no-repeat;
+    background: url("../images/the-school-of-choimirai-logo-red-v3.png") center left no-repeat;
     background-size: auto 2em;
 }
 
@@ -1818,7 +1818,7 @@ a.tooltip span{
 }
 
 .page-workpage .logo {
-    background-image: url("../images/logo-choimirai-eng.png");
+    background-image: url("../images/the-school-of-choimirai-logo-red-v3.png");
 }
 
 .page-workpage .single {
