--- a/tbx/core/templates/torchbox/blog_page.html
+++ b/tbx/core/templates/torchbox/blog_page.html
@@ -1,5 +1,5 @@
 {% extends "torchbox/base.html" %}
-{% load wagtailcore_tags wagtailimages_tags torchbox_tags %}
+{% load wagtailcore_tags wagtailimages_tags torchbox_tags disqus_tags %}
 
 {% block content %}
 {% get_next_sibling_blog self as next_page %}
@@ -35,17 +35,19 @@
             {# note these tags are all squashed together in order to avoid a space before the comma if there are current authors as well as an author who has left #}
             {% with self.related_author.all as authors %}{% if authors %}{% for author in authors %}{% if author.author %}<a href="{% pageurl author.author %}">{{ author.author.title }}</a>{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}{% endif %}{% endwith %}{% if self.author_left %}{% if self.has_authors %}, {% endif %}{{ self.author_left }}{% endif %}
 
-            <div class="share">
-                {% if self.has_authors %}| {% endif %}<a>Share &#10084;</a>
-                <ul class="share options">
-                    <li>
-                        <div class="fb-like" data-width="100" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-via="torchbox">Tweet</a>
-                    </li>
-                </ul>
-            </div>
+{#            <div class="share">#}
+{#                {% if self.has_authors %}| {% endif %}<a>Share &#10084;</a>#}
+{#                <ul class="share options">#}
+{#                    <li>#}
+{#                        <div class="fb-like" data-width="100" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="https://twitter.com/share" class="twitter-share-button" data-via="torchbox">Tweet</a>#}
+{#                    </li>#}
+{#                </ul>#}
+{#            </div>#}
+            <!-- Go to www.addthis.com/dashboard to customize your tools -->
+            <div class="addthis_responsive_sharing"></div>
         </div>
 
         {% if not self.streamfield and self.intro %}
@@ -89,9 +91,11 @@
                 {% endif %}
             {% endwith %}
         </section>
-
+        <div class="addthis_responsive_sharing"></div>
+        {% disqus_show_comments %}
     </section>
 </main>
+{#{% disqus_dev %}#}
 
 <div id="fb-root"></div>
 {% endblock %}
