--- a/tbx/core/templates/500.html
+++ b/tbx/core/templates/500.html
@@ -129,52 +129,52 @@
                     <div class="contact container listing">
                         <h2>Say hello</h2>
                         <ul class="footerbleed">
-                            <li><a href="mailto:hello@torchbox.com"><i class="icon-mail"></i><span>hello@torchbox.com</span></a></li>
-                            <li><a href="tel:+441608811870"><i class="icon-phone"></i><span>+44 (0) 1608 811870</span></a></li>
-                            <li><a href="https://twitter.com/torchbox"><i class="icon-twitter"></i><span>@torchbox</span></a></li>
+                            <li><a href="mailto:hello@torchbox.com"><i class="icon-mail"></i><span>hello@choimirai.com</span></a></li>
+{#                            <li><a href="tel:+441608811870"><i class="icon-phone"></i><span>+44 (0) 1608 811870</span></a></li>#}
+                            <li><a href="https://twitter.com/thechoimirai"><i class="icon-twitter"></i><span>@thechoimirai</span></a></li>
                         </ul>
                     </div>
 
                     <div class="offices container ">
                         <h2 class="visuallyhidden">Visit us</h2>
-                        <ul class="clearfix listing">
-                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.858115,-1.480577,17z/data=!3m1!4b1!4m2!3m1!1s0x4876d26f301900bd:0xca3bbb6b78d4b3e4">
-                                <li>
-                                    <div class="svg">
-                                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">
-                                            <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>
-                                            </svg> </path>
-                                    </div>
-
-                                    <h3>Oxford</h3>
-                                        <div class="vcard">
-                                            <span class="street-address">Unit&nbsp;9, Southill&nbsp;Business&nbsp;Park</span>,
-                                            <span class="region">Charlbury</span>,
-                                            <span class="postal-code">OX7&nbsp;3EW</span>,
-                                            <span class="country-name">UK</span>
-                                        </div>
-                                </li>
-                            </a>
-                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.453371,-2.60056,20z/data=!3m1!4b1!4m2!3m1!1s0x48718dd73f674ef7:0xa01401396c06a317">
-                                <li>
-                                    <div class="svg">
-                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">
-                                        <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>
-                                        </svg> </path>
-                                    </div>
-                                    <h3>Bristol</h3>
-                                        <div class="vcard">
-                                            <span class="street-address">The Annexe, 4&nbsp;Unity&nbsp;Street</span>,
-                                            <span class="region">Bristol</span>,
-                                            <span class="postal-code">BS1&nbsp;5HH</span>,
-                                            <span class="country-name">UK</span>
-                                        </div>
-                                </li>
-                            </a>
-                            <div class="wagtail">
-                                <a href="http://wagtail.io"><img src="{% static "torchbox/images/wagtail.png" %}" alt="Wagtail"></a>
-                            </div>
-                        </ul>
+{#                        <ul class="clearfix listing">#}
+{#                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.858115,-1.480577,17z/data=!3m1!4b1!4m2!3m1!1s0x4876d26f301900bd:0xca3bbb6b78d4b3e4">#}
+{#                                <li>#}
+{#                                    <div class="svg">#}
+{#                                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">#}
+{#                                            <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>#}
+{#                                            </svg> </path>#}
+{#                                    </div>#}
+{##}
+{#                                    <h3>Oxford</h3>#}
+{#                                        <div class="vcard">#}
+{#                                            <span class="street-address">Unit&nbsp;9, Southill&nbsp;Business&nbsp;Park</span>,#}
+{#                                            <span class="region">Charlbury</span>,#}
+{#                                            <span class="postal-code">OX7&nbsp;3EW</span>,#}
+{#                                            <span class="country-name">UK</span>#}
+{#                                        </div>#}
+{#                                </li>#}
+{#                            </a>#}
+{#                            <a href="https://www.google.co.uk/maps/place/Torchbox/@51.453371,-2.60056,20z/data=!3m1!4b1!4m2!3m1!1s0x48718dd73f674ef7:0xa01401396c06a317">#}
+{#                                <li>#}
+{#                                    <div class="svg">#}
+{#                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 585 841.9" enable-background="new 0 0 585 841.9" xml:space="preserve">#}
+{#                                        <path fill="" d="M363.8,267.3c-19.5-18.1-45.5-28.4-71.3-28.4s-51.8,10.4-71.3,28.4c-20.2,18.7-31.3,43-31.3,68.5  c0,66.7,100.8,255.4,101.8,257.3c0.2,0.3,0.5,0.5,0.9,0.5c0.4,0,0.7-0.2,0.9-0.5c1-1.9,101.8-190.6,101.8-257.3  C395.1,310.3,384,286,363.8,267.3z"/>#}
+{#                                        </svg> </path>#}
+{#                                    </div>#}
+{#                                    <h3>Bristol</h3>#}
+{#                                        <div class="vcard">#}
+{#                                            <span class="street-address">The Annexe, 4&nbsp;Unity&nbsp;Street</span>,#}
+{#                                            <span class="region">Bristol</span>,#}
+{#                                            <span class="postal-code">BS1&nbsp;5HH</span>,#}
+{#                                            <span class="country-name">UK</span>#}
+{#                                        </div>#}
+{#                                </li>#}
+{#                            </a>#}
+{#                            <div class="wagtail">#}
+{#                                <a href="http://wagtail.io"><img src="{% static "torchbox/images/wagtail.png" %}" alt="Wagtail"></a>#}
+{#                            </div>#}
+{#                        </ul>#}
                     </div>
                          <img class="wagtail2" src="{% static "torchbox/images/wagtail.png" %}" alt="" style="width:165px;height:19px">
             </footer>
